--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
+  box-sizing: border-box;
   background-color: #333;
   font-family: sans-serif;
   font-size: 10px;
@@ -7,15 +12,57 @@ body {
 .container {
   margin: 0 auto;
   width: 420px;
+  background-color: #5d5d5d;
 }
 
 nav {
+  box-sizing: border-box;
   margin: 0 auto;
-  padding: 10px 0 15px 15px;
+  padding: 10px 0 20px 15px;
   position: fixed;
   width: 420px;
+  background-color: black;
 }
 
 .restaurant-list {
   padding-top: 50px;
+  background-color: lightgray;
+  margin: auto;
+  border: 5px;
+  width: 100%;
+}
+
+.location h1 {
+  box-sizing: border-box;
+  font-size: 2em;
+  font-weight: bold;
+  text-align: left;
+}
+
+.location h3 {
+  box-sizing: border-box;
+  font-size: 1.5em;
+  text-align: left;
+}
+
+.arrow {
+  text-align: right;
+}
+
+.arrow-left {
+  text-align: left;
+}
+
+.location:hover { background-color: darkgray; }
+
+.location {
+  background-color: lightgray;
+  border: .5px solid gray;
+  padding: 10px;
+  width: 100%;
+}
+
+.content {
+  display: inline-block;
+  width: 100%;
 }
